--- a/styles.css
+++ b/styles.css
@@ -1,102 +1,170 @@
-:root {
-    --primary-color: #adf0d4;
-    --secondary-color: #1fd8a4;
-    --bg-color: black;
-    --secondary-bg-color: rgb(50, 49, 49);
+    *{
+        margin:0;
+        padding:0;
+        box-sizing:border-box;
+
+    }
+    body {
+        background:rgb(54, 63, 81);
+        color: white;
+        min-height:100vh;
+        display: flex;
+        flex-direction:column;
+        gap:14px;
+        font-family:sans-serif, 'Times New Roman', Times, serif
 }
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif, 'Times New Roman', Times, serif;
-    transition-duration: 300ms;
-}
-
-@media (min-width:640px) {
-
-}
-
-body {
-    background: var(--bg-color);
-    background: linear-gradient(180deg, var(--bg-color) 20%, var(--secondary-bg-color) 90%);
-    color: var(--primary-color);
-    padding: 24px;
-    
-}
-
 header {
-    display:flex;
+    display: flex;
+    align-items: center;
     justify-content: space-between;
-    margin: 10px;
+    padding:14px;
 }
 
-img {
+header section img {
+    max-width: 48px;
+    border-radius: 50px;
+    border:2px solid cyan;
+}
+
+nav, section {
     display: flex;
-    flex-direction: column;
-    max-width: 500px;
-    justify-content: center;
-    margin:auto;
+    align-items: center;
+    gap: 14px;
 }
 
-.topRight {
-    font-size: 1.5em;
+.whiteLink {
+    color:white;
 }
 
-.familyPhoto img {
-    border: 5px solid black;
+.greyLink {
+    color:lightgray;
 }
 
-.parents {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    padding:24px;
-    
+a{
+    text-decoration:unset;
+    font-size:0.8;
 }
 
-.description {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+a:hover {
+    text-decoration:underline;
+}
+
+main{
+    flex:1;
+    display:flex;
+    align-items:center;
+    flex-direction:column;
     justify-content:center;
-    margin-right:auto;
-    margin-left: auto;
-    width: 50%;
-    padding-top: 36px;
-    padding-bottom: 36px;
+    gap: 24px;
+    padding:0 14px;
 }
 
-.childrenName {
-    display: flex;
-    text-align: center;
-    justify-content: space-between;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 200px;
-    padding-right: 200px;
+.headerText {
+    font-size:8em;
+    font-family:'Times New Roman', Times, serif;
 }
 
-.childrenImage {
+#headerLogo {
+    font-family: sans-serif;
+    color:rgb(12, 75, 143);
+}
+
+.searchBar {
     display:flex;
+    width: 100%;
+    max-width: 800px;
+    margin: 0, auto;
+    gap: 14px;
+    border: 1px solid grey;
+    padding: 14px;
+    border-radius: 24px;
 }
 
-.childrenImage img {
-    max-width: 400px;
-    display: flex;
-    padding: 25px;
+.searchBar:hover {
+    border-color:transparent;
+    background:rgb(110, 144, 236);
+}
 
+input {
+    background:transparent;
+    outline:none;
+    border:unset;
+    color:white;
+    flex: 1;
+
+}
+
+.searchButtonsContainer {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+
+.searchButtonsContainer button { 
+    padding: 10px 14px;
+    border-radius: 4px;
+    background:#195dbb;
+    border:1px solid transparent;
+    color:white;
+
+}
+
+.searchButtonsContainer button:hover {
+    border:1px solid darkgray;
+    background:rgb(12, 88, 142);
+    cursor: pointer;
+}
+
+.languageSelection {
+    font-size: 0.8em;
+}
+
+.languageSelection span {
+    color:rgb(29, 136, 223)
 }
 
 footer {
     display:flex;
-    justify-content: space-between;
-    border-top: 2px solid white;
-    margin-top: 36px;
-    padding-top: 12px;
+    flex-direction: column;
 }
 
-a{
-    color: lightcyan;
-    padding: 18px;
+footer>section {
+    padding:14px;
+}
+
+footer > section:last-child {
+    display:flex;
+    align-items: center;
+    justify-content: space-around;
+    border-top: 1px solid darkgray;
+    flex-direction: column;
+}
+
+.footerlink {
+    display: flex;
+    align-items: center;
+    gap: 14px;
+}
+
+.footerlink a {
+    cursor: pointer;
+}
+
+.iconbutton {
+    background:transparent;
+    border:none;
+    color:white;
+    font-size: 1.2em;
+}
+
+.iconbuttoncontainer {
+    display:flex;
+    gap:14px;
+    align-items: center;
+}
+
+@media (min-width:540px) {
+    footer > section:last-child {
+        flex-direction: row;
+    }
 }
